--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "swr": "^1.3.0",
